# UniQA_ChatBot

./: README.md  pyproject.toml  requirements.txt
docs/: INGEST.md
iau_chatbot/: __init__.py  __main__.py  build_wiki.py  config.py  exceptions.py  llm.py  logging.py
iau_chatbot/agent/: __init__.py  graph.py  prompts.py  state.py
iau_chatbot/api/: __init__.py  __main__.py  app.py  errors.py  models.py  schemas.py  service.py  sessions.py  ui.py
iau_chatbot/ingest/: __init__.py  __main__.py  pdf.py  segments.py
iau_chatbot/retrieval/: __init__.py  context.py  lexical.py  metadata.py  vector.py
iau_chatbot/wiki/: __init__.py  markdown.py  schema.py  store.py
tests/: test_agent_graph.py  test_api.py  test_build_wiki.py  test_cli.py  test_config.py  test_end_to_end.py  test_llm.py  test_metadata_retrieval.py  test_pdf_ingest.py  test_retrieval.py  test_segments.py  test_wiki_schema.py  test_wiki_store.py
